--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 MSW/Diagrama de Classe- Gerenciador de Condominios.png
 MSW/sgc (qse final!).asta
 MSW/TrabalhoMSW.pdf
+/POO/Gerenciador De Condominios/build/
+/POO/Gerenciador De Condominios/dist/
